--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+body {
+    text-align: center;
+    margin: 0 30% 1%;
+}
+
+div {
+    color: darkslategray;
+    font-size: 19px;
+    background: lightgrey;
+    padding: 3px;
+}
+
+button {
+    border-radius: 15px;
+    border: solid  black 2px;
+    font-size: 20px;
+    width: 100px;
+    color: teal;
+    font-family: inherit;
+    z-index: 1;
+    overflow: hidden;
+    transition: 0.5s;
+    display: inline-block;
+    position: relative;
+}
+
+button:before {
+    content: "";
+    position: absolute;
+    background: linear-gradient(90deg, #03a9f4, #f441a5,
+    #ffeb3b, #03a9f4);
+    height: 100px;
+    width: 150px;
+    border-radius: 50%;
+    z-index: -1;
+}
+
+button:hover {
+    color: black;
+    animation: animation 8s linear infinite;
+}
+
+@keyframes animation {
+    0% {background-position: 0; }
+    100% {background-position: 400%;}
+}
+
+button:before {
+    top: 100%;
+    left: 100%;
+    transition: 0.7s;
+}
+
+button:hover:before {
+    top: -30px;
+    left: -30px;
+    filter: blur(5px);
+}
+
+button:active:before {
+    background: white;
+    transition: 0s;
 }
