--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,13 @@
 .Header{
+height: 50px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    background: lightblue;
+}
 
+a{
+    text-decoration: none;
+    color: snow;
+    margin: 5px;
 }
